[package]
name = "asyncra"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Unblocking async runtime"

[dependencies]
tokio = {version = "1.41.1", features = ["full"]}
anyhow = "1.0.93"
num_cpus = "1.16.0"
lazy_static = "1.5.0"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
asyncra_macros = {version = "*"}