[package]
name = "asyncra"
version = "0.1.0-beta"
edition = "2021"
license = "Apache-2.0"
description = "Unblocking async runtime"

[[test]]
path = "tests/unit.rs"
name = "unit"

[[bench]]
name = "bench"
harness = false

[dependencies]
tokio = {version = "1.41.1", features = ["full"]}
anyhow = "1.0.93"
num_cpus = "1.16.0"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
asyncra_macros = {version = "0.2.0"}
criterion = "0.5.1"